
2018-08-19  Edward Hart <edward.dan.hart@gmail.com>

	* configure.ac: added detection of libxml2.
	* m4/m4_ax_check_define.m4: added AC_CHECK_DEFINE macro from the GNU
	  Autoconf Archive.

2018-06-19  Ludwin Janvier <lud.janvier@gmail.com>

	* configure.ac: remove -g from default options and remove removal
	  of -g from CFLAGS

2018-06-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac [_WIN32]: only set GCC export and linker flag
	  if we actually compile with GCC

2018-05-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac [_WIN32]: define __GMP_LIBGMP_DLL when importing
	  and calling gmp functions (done for version check) - to use
	  a static version define __GMP_LIBGMP_DLL=0 via CPPFLAGS

2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac (AC_CHECK_FUNCS): removed unused strxfrm, added popen
	* configure.ac: ensure that we don't replace too much when adjusting
	  CFLAGS concerning -g

2018-04-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: removed use of line breaks in sysout from C
	  test compilation for extracting GMP/BDB version numbers

2018-04-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: added --enable-cobc-internal-checks to define
	  COB_TREE_DEBUG in config.h

2018-04-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* extras/Makefile.am: compile with -O2 and retry without optimization
	  if first compilation did not work, see Bug #439

2018-03-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am (checkmanual): new target for running manual tests,
	  note: if needed the test runner tests/run_prog_manual.sh may
	  be changed by the user

2018-03-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for curses define_key function

2018-03-11  Ron Norman <rjn@inglenet.com>

	* configure.ac: COB_STRFTIME and COB_HAS_UTC_OFFSET removed as