@@ -1,9 +1,17 @@
 
+2018-08-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* m4/pkg.m4: added for PKG_PROG_PKG_CONFIG / PKG_CHECK_MODULES macros
+	  from current pkg-config release
+	* configure.ac: included optional pkg-config (cross-compile aware),
+	  currently only used for libxml2 (and only if xml2-config not found);
+	  always check for existing header / linkable library for xml2
+
 2018-08-19  Edward Hart <edward.dan.hart@gmail.com>
 
-	* configure.ac: added detection of libxml2.
-	* m4/m4_ax_check_define.m4: added AC_CHECK_DEFINE macro from the GNU
-	  Autoconf Archive.
+	* configure.ac: added detection of libxml2
+	* m4/m4_ax_check_define.m4: added for AC_CHECK_DEFINE macro from the
+	  GNU Autoconf Archive
 
 2018-06-19  Ludwin Janvier <lud.janvier@gmail.com>
 
